# Programming-Crappy-Solutions

./: README.md  _navbar.md  index.html  k-nearest-neighbours.py  test.js
.obsidian/: app.json  appearance.json  (+2 more)
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/: Dockerfile  PLEASE_READ.txt  docker-compose.yml  flag.txt  main.py  pyproject.toml  requirements.txt  run_server.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/client/: __init__.py  gameclient.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/client/error/: __init__.py  error.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/client/event/: __init__.py  battleevent.py  shopevent.py  workevent.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/client/networking/: __init__.py  netclient.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/client/ui/: __init__.py  banners.py  boxes.py  entities.py  menus.py  screens.py  utility.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/core/: __init__.py  boss.json  config.py  game.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/core/models/: __init__.py  boss.py  command.py  player.py  result.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/core/networking/: __init__.py  protocol.py
Cyber Security/Capture the Flag Competitions/2022/TISC/Level 1/modified_src/server/: __init__.py  gameserver.py
(+9653 files in other folders)
