[tool.poetry]
name = "slay-the-dragon"
version = "0.1.0"
description = "A hackable online RPG"
authors = ["niktay"]

[tool.poetry.dependencies]
python = "3.10.*"
loguru = "^0.6.0"
nclib = "^1.0.1"
pytermgui = "^6.4.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
pynvim = "^0.4.3"
ipython = "^8.4.0"
isort = "^5.10.1"
poethepoet = "^0.15.0"
pyinstaller = "^5.1"
autoflake = "^1.4"
flake8 = "^4.0.1"

[tool.poe.tasks]
serve = "socat -v tcp-l:1337,reuseaddr,fork EXEC:\"$VIRTUAL_ENV/bin/python $PWD/run_server.py\""
build = "pyinstaller --onefile main.py"
format = "black ."
sort = "isort ."
lint = "flake8 ."
clean = ["sort", "format", "lint"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
